--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "date-fns": "^2.28.0",
     "firebase": "^9.6.10",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-big-calendar": "^0.40.0",
     "react-bootstrap": "^2.2.1",
+    "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.2.2",
